fix: removed horizontal scrollbar in navigationbar

--- a/app/styles/sb-admin.less
+++ b/app/styles/sb-admin.less
@@ -111,6 +111,7 @@ table.tablesorter thead tr th:hover {
   border: none;
   background-color: #222222;
   overflow-y: auto;
+  overflow-x: hidden;
   }
 
   // Bootstrap Default Overrides - Customized Dropdowns for the Side Nav
